--- a/Projects/01_projects/theme.css
+++ b/Projects/01_projects/theme.css
@@ -1,4 +1,9 @@
-button{
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+button {
     width: 100px;
     height: 100px;
     /* padding: 50px; */
@@ -7,8 +12,67 @@ button{
     color: aliceblue;
 }
 
-#gray{background-color: gray;}
-#yellow{background-color: yellow;}
-#red{background-color: rgb(206, 109, 109);}
-#green{background-color: rgb(51, 77, 51);}
-#black{background-color: black;}
+#gray {
+    background-color: gray;
+}
+
+#yellow {
+    background-color: yellow;
+}
+
+#red {
+    background-color: rgb(206, 109, 109);
+}
+
+#green {
+    background-color: rgb(51, 77, 51);
+}
+
+#black {
+    background-color: black;
+}
+
+
+#home {
+    float: left;
+    margin-left: 150px;
+    margin-top: 12px;
+
+}
+
+#github {
+    margin-left: 150px;
+    padding-top: 12px;
+
+}
+
+.outer-div {
+    text-align: center;
+    height: 500px;
+    width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+    /* padding-top: 200px;
+padding-left: 300px; */
+    /* background-color: grey; */
+}
+
+.container {
+    text-align: center;
+    height: 50px;
+    width: 900px;
+    background-color: cadetblue;
+    margin-bottom: 50px;
+    color: black;
+}
+
+a {
+    text-align: center;
+    text-decoration: none;
+    /* border: 3px solid orange; */
+    /* background: transparent; */
+    /* background-color: aqua; */
+    color: black;
+    font-size: 20px;
+
+}
