--- a/Projects/projects.css
+++ b/Projects/projects.css
@@ -1,18 +1,46 @@
 *{
-    /* margin: 0px;
-    padding: 0px; */
+    margin: 0px;
+    padding: 0px;
     text-decoration: none;
 }
 
-div{
+.outer-div{
+    text-align: center;
 height: 500px;
-width: 500px;
-/* padding-top: 200px;
-padding-left: 300px; */
-margin: auto;
+width: 1000px;
+padding-top: 200px;
+padding-left: 500px;
 /* background-color: grey; */
 }
+
 .btn{
     font-size: 30px;
     text-align: center;
+}
+.container{
+    height: 50px;
+    width: 900px;
+    background-color: cadetblue;
+    margin-bottom: 50px;
+    color: black;
+}
+#home{
+    float: left;
+    /* text-align: center;  */
+
+}
+a{
+    height: 40px;
+    width: 450px;
+    float: left;
+    text-align: center;
+    margin-top: 12px;
+    text-decoration: none;
+    border-radius: 5px;
+    /* background: transparent; */
+    /* background-color: aqua; */
+    color: black;
+    font-size: 20px;
+    
+
 }
