--- a/Projects/projects.css
+++ b/Projects/projects.css
@@ -1,35 +1,38 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
     text-decoration: none;
 }
 
-.outer-div{
+.outer-div {
     text-align: center;
-height: 500px;
-width: 1000px;
-padding-top: 200px;
-padding-left: 500px;
-/* background-color: grey; */
+    height: 500px;
+    width: 1000px;
+    /* padding-top: auto; */
+    padding-left: 300px;
+    /* background-color: grey; */
 }
 
-.btn{
+.btn {
     font-size: 30px;
     text-align: center;
 }
-.container{
+
+.container {
     height: 50px;
     width: 900px;
     background-color: cadetblue;
     margin-bottom: 50px;
     color: black;
 }
-#home{
+
+#home {
     float: left;
     /* text-align: center;  */
 
 }
-a{
+
+a {
     height: 40px;
     width: 450px;
     float: left;
@@ -41,6 +44,6 @@ a{
     /* background-color: aqua; */
     color: black;
     font-size: 20px;
-    
+
 
 }
