add new Project (key press) css

--- a/Projects/05_backgroundChanger/background.css
+++ b/Projects/05_backgroundChanger/background.css
@@ -41,3 +41,16 @@ a {
     font-size: 20px;
 
 }
+
+/* keyPress Project */
+
+.keycode {
+    margin: auto;
+    width: 14%;
+}
+
+table,
+th,
+td {
+    border: 1px solid black;
+}
